# credit-ratings-service

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CURRENT_STATUS.md  DEPLOYMENT.md  Dockerfile  FINAL_STATUS.md  FULLSTACK_README.md  GETTING_STARTED.md  HIGHLIGHTS.md  IMPROVEMENTS.md  LLM_EXTRACTION_GUIDE.md  Makefile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  TESTING_GUIDE.md  debug_scraper.py  docker-compose.fullstack.yml  docker-compose.yml  example_llm_usage.py  example_usage.py  package-lock.json  package.json  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  routes.py  v3_endpoints.py
app/core/: __init__.py  config.py  logging.py
app/models/: __init__.py  enums.py  schemas.py
app/scrapers/: __init__.py  base.py  fitch.py  llm_scraper.py  moodys.py  sp.py
app/services/: __init__.py  cache.py  entity_resolver.py  entity_resolver_llm.py  entity_resolver_v2.py  entity_resolver_v3.py  hardcoded_ratings.py  known_entities.py  llm_client.py  rate_limiter.py  ratings_service.py  ratings_service_llm.py
app/utils/: __init__.py  name_normalizer.py  rating_normalizer.py
credit-rating-scraper/: cli.py  config.py  requirements.txt
frontend/: .env.example  API_DOCUMENTATION.md  DEEPSEEK_INTEGRATION.md  DEEPSEEK_PRIMARY_SOURCE.md  DEEPSEEK_SETUP.md  DEPLOYMENT.md  Dockerfile  INSTITUTIONAL.md  INSTITUTIONAL_LLM.md  LATAM_IMPROVEMENTS.md  LLM_SETUP.md  PRODUCTION_SETUP.md  QA_REPORT.md  README.md  README_LLM.md  RESEARCH.md  index.html  package-lock.json  package.json  tailwind.config.ts  test-llm.js
tests/: __init__.py
(+88 files in other folders)
